--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_app_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Cylinder20">
-        <activity android:name=".LoadingActivity"></activity>
+        <activity android:name=".ChangedefpassActivity"></activity>
+        <activity android:name=".LoadingActivity" />
         <activity android:name=".PresettingActivity" />
         <activity android:name=".LoginActivity" />
         <activity android:name=".WelcomeActivity" />
@@ -22,8 +23,7 @@
         </activity>
         <activity
             android:name=".MainActivity"
-            android:label="@string/app_name">
-        </activity>
+            android:label="@string/app_name"></activity>
     </application>
 
 </manifest>
