--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,13 +2,17 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.eachut.cylinder">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_app"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_app_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Cylinder20">
+        android:theme="@style/Theme.Cylinder20"
+        android:usesCleartextTraffic="true">
         <activity android:name=".LoadingActivity"></activity>
         <activity android:name=".PresettingActivity" />
         <activity android:name=".LoginActivity" />
