--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.eachut.cylinder">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
         android:allowBackup="true"
@@ -9,8 +11,11 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_app_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Cylinder20">
-        <activity android:name=".LoadingActivity"></activity>
+        android:theme="@style/Theme.Cylinder20"
+        android:usesCleartextTraffic="true">
+        <activity android:name=".AddNewMemberActivity"></activity>
+        <activity android:name=".LoadingActivity" />
+        <activity android:name=".ChangedefpassActivity" />
         <activity android:name=".PresettingActivity" />
         <activity android:name=".LoginActivity" />
         <activity android:name=".WelcomeActivity" />
