--- a/app/build.gradle
+++ b/app/build.gradle
@@ -98,4 +98,9 @@ dependencies {
     //Biometric
     implementation 'androidx.biometric:biometric:1.0.1'
 
+    //recycler
+    def glide_version = '4.12.0'
+    implementation "com.github.bumptech.glide:glide:$glide_version"
+    annotationProcessor "com.github.bumptech.glide:compiler:$glide_version"
+
 }
