--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Cylinder20"
         android:usesCleartextTraffic="true">
-        <activity android:name=".ui.profiles.GetResellerProfile"
+        <activity android:name=".PrenameActivity"></activity>
+        <activity
+            android:name=".ui.profiles.GetResellerProfile"
             tools:ignore="Instantiatable" />
         <activity android:name=".ChangedefpassActivity" />
         <activity
@@ -23,22 +25,17 @@
             android:theme="@style/Theme.Cylinder20" />
         <activity android:name=".PresettingActivity" />
         <activity android:name=".AddNewMemberActivity" />
-        <activity android:name=".LoginActivity" >
-
-        </activity>
+        <activity android:name=".LoginActivity"></activity>
         <activity android:name=".WelcomeActivity" />
         <activity
             android:name=".MainActivity"
-            android:label="@string/app_name" >
-
-        </activity>
+            android:label="@string/app_name"></activity>
         <activity android:name=".SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
     </application>
 
