--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,21 +21,25 @@
         android:requestLegacyExternalStorage="true"
         android:usesCleartextTraffic="true">
         <activity android:name=".ReceiptActivity"
-            android:exported="true">
-
-        </activity>
-        <activity android:name=".PrenameActivity" />
+            android:exported="true"/>
+        <activity
+            android:name=".PrenameActivity" />
         <activity
             android:name=".ui.profiles.GetResellerProfile"
             tools:ignore="Instantiatable" />
-        <activity android:name=".ChangedefpassActivity" />
+        <activity
+            android:name=".ChangedefpassActivity" />
         <activity
             android:name=".LoadingActivity"
             android:theme="@style/Theme.Cylinder20" />
-        <activity android:name=".PresettingActivity" />
-        <activity android:name=".AddNewMemberActivity" />
-        <activity android:name=".LoginActivity" />
-        <activity android:name=".WelcomeActivity" />
+        <activity
+            android:name=".PresettingActivity" />
+        <activity
+            android:name=".AddNewMemberActivity" />
+        <activity
+            android:name=".LoginActivity" />
+        <activity
+            android:name=".WelcomeActivity" />
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name">
