--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,44 +10,41 @@
     <uses-permission android:name="android.permission.CALL_PHONE" />
     <uses-permission android:name="android.permission.SEND_SMS" />
 
-
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_app"
         android:label="@string/app_name"
+        android:requestLegacyExternalStorage="true"
         android:roundIcon="@mipmap/ic_app_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Cylinder20"
-        android:requestLegacyExternalStorage="true"
         android:usesCleartextTraffic="true">
-        <activity android:name=".ReceiptActivity"
-            android:exported="true"/>
+        <activity android:name=".SuccessMemberAdd"></activity>
         <activity
-            android:name=".PrenameActivity" />
+            android:name=".ReceiptActivity"
+            android:exported="true" />
+        <activity android:name=".PrenameActivity" />
         <activity
             android:name=".ui.profiles.GetResellerProfile"
             tools:ignore="Instantiatable" />
-        <activity
-            android:name=".ChangedefpassActivity" />
+        <activity android:name=".ChangedefpassActivity" />
         <activity
             android:name=".LoadingActivity"
             android:theme="@style/Theme.Cylinder20" />
-        <activity
-            android:name=".PresettingActivity" />
-        <activity
-            android:name=".AddNewMemberActivity" />
-        <activity
-            android:name=".LoginActivity" />
-        <activity
-            android:name=".WelcomeActivity" />
+        <activity android:name=".PresettingActivity" />
+        <activity android:name=".AddNewMemberActivity" />
+        <activity android:name=".LoginActivity" />
+        <activity android:name=".WelcomeActivity" />
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
         </activity>
         <activity android:name=".SplashActivity">
 
