--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,9 +19,10 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Cylinder20"
         android:usesCleartextTraffic="true">
-        <activity android:name=".ExtraWorkAcitivity"></activity>
-        <activity android:name=".ExtraWorkActivity" />
-        <activity android:name=".AddSchedule" />
+        <activity android:name=".ExtraWorkAcitivity"
+            android:windowSoftInputMode="stateHidden"></activity>
+        <activity android:name=".AddSchedule"
+            android:windowSoftInputMode="stateHidden"/>
         <activity android:name=".SuccessMemberAdd" />
         <activity
             android:name=".ReceiptActivity"
