--- a/app/build.gradle
+++ b/app/build.gradle
@@ -73,6 +73,8 @@ dependencies {
     androidTestImplementation 'androidx.test:runner:1.3.0'
     androidTestImplementation 'androidx.test:rules:1.3.0'
 
+    compileOnly 'com.google.android.wearable:wearable:2.6.0'
+
 
     //blur
     implementation 'com.eightbitlab:blurview:1.6.6'
