--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,9 +3,12 @@ plugins {
     id 'kotlin-android'
 }
 apply plugin: "kotlin-kapt"
+apply plugin: 'com.google.gms.google-services'
+
 android {
     compileSdkVersion 30
     buildToolsVersion "30.0.3"
+
 
     defaultConfig {
         applicationId "com.eachut.cylinder"
@@ -46,11 +49,13 @@ android {
     }
     buildFeatures {
         viewBinding true
+        dataBinding = true
     }
 }
 
 dependencies {
 
+    implementation 'androidx.databinding:databinding-runtime:4.1.3'
     def fragment_version = "1.3.6"
     debugImplementation "androidx.fragment:fragment-testing:$fragment_version"
 
@@ -77,6 +82,14 @@ dependencies {
     compileOnly 'com.google.android.wearable:wearable:2.6.0'
 
 
+//Firebase import
+    implementation platform('com.google.firebase:firebase-bom:28.2.1')
+    implementation 'com.google.firebase:firebase-analytics-ktx'
+    implementation 'com.google.firebase:firebase-core:16.0.0'
+    implementation 'com.google.firebase:firebase-database-ktx:20.0.1'
+    implementation 'com.google.firebase:firebase-messaging-ktx'
+
+    implementation 'com.android.volley:volley:1.2.0'
     //blur
     implementation 'com.eightbitlab:blurview:1.6.6'
 
