--- a/cylinderwearos/build.gradle
+++ b/cylinderwearos/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
+    id 'com.google.gms.google-services'
 }
 
 android {
@@ -34,6 +35,7 @@ android {
 
 dependencies {
 
+    implementation 'com.google.firebase:firebase-messaging:20.1.0'
     def fragment_version = "1.3.6"
     debugImplementation "androidx.fragment:fragment-testing:$fragment_version"
 
