--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,6 +56,7 @@ android {
 dependencies {
 
     implementation 'androidx.databinding:databinding-runtime:4.1.3'
+    implementation 'com.google.firebase:firebase-inappmessaging-display-ktx:20.1.0'
     def fragment_version = "1.3.6"
     debugImplementation "androidx.fragment:fragment-testing:$fragment_version"
 
