Some Testing added

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,7 +36,8 @@
         <activity
             android:name=".LoadingActivity"
             android:theme="@style/Theme.Cylinder20" />
-        <activity android:name=".PresettingActivity" />
+        <activity android:name=".PresettingActivity" >
+        </activity>
         <activity android:name=".AddNewMemberActivity" />
         <activity android:name=".LoginActivity" />
         <activity android:name=".WelcomeActivity" />
@@ -50,7 +51,6 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
         <activity android:name=".SplashActivity">
         </activity>
